@startuml

' !define ENTITY
!define PRIMARY_KEY(x) <b><color:blue>x</color></b>
!define FOREIGN_KEY(x) <color:green>x</color>

hide circle

entity Cribroom {
    + PRIMARY_KEY(id)
    --
    name
    entity
    CUIT
    code
    max_capacity
    street
    house_number
    geolocation = null True
    is_active
    --
    FOREIGN_KEY(Locality)
    FOREIGN_KEY(Shift)
    FOREIGN_KEY(Co_management)
    FOREIGN_KEY(User)
    FOREIGN_KEY(Neighborhood) (null True)
    FOREIGN_KEY(Sectional) (null True)
    --
    generarPadron()
    generarNotaDePago()
    generarInformeTecnico()
    lastDesinfection()
    actualCapacity()
    reachMax()
}

entity Company {
    + PRIMARY_KEY(id)
    --
    title = str
    phone = int
    --
    --
    ()
}

entity Desinfection {
    + PRIMARY_KEY(id)
    --
    date = datetime
    description = str
    --
    FOREIGN_KEY(Cribroom)
    FOREIGN_KEY(Company)
    --
    ()
}

Desinfection "*" - "1" Company
Desinfection "*" -- "1" Cribroom

entity Payout {
    + PRIMARY_KEY(id)
    --
    amount = float
    date = date
    --
    FOREIGN_KEY(Zone)
    ' Payout_Adress = capital or upcountry
    --
    ()
}

entity Zone {
    + PRIMARY_KEY(id)
    --
    zone
    --

    ' interior or capital
    --
    ()
}

Payout "*" - "1" Zone
' Zone "1" - "*" Cribroom

entity Child {
    + PRIMARY_KEY(id)
    --
    first_name
    last_name
    identification = str, null True
    birthdate
    street
    house_number
    geolocation = null True
    registration_date
    disenroll_date = default null
    is_active = bool, default True
    --
    FOREIGN_KEY(Locality)
    FOREIGN_KEY(Neighborhood)
    FOREIGN_KEY(Gender)
    FOREIGN_KEY(Cribroom)
    FOREIGN_KEY(Shift)
    FOREIGN_KEY(User)
    FOREIGN_KEY(Guardian)
    FOREIGN_KEY(Ident_type)
    --
    cribroom_isActive()
    age()
}

Cribroom "1" - "*" Child

entity User {
    + PRIMARY_KEY(id)
    --
    username
    password
    --
    FOREIGN_KEY(User_email)
    FOREIGN_KEY(Role)
    --
    ()
}

entity Cribroom_User {
    + PRIMARY_KEY(id)
    --

    --
    FOREIGN_KEY(Cribroom)
    FOREIGN_KEY(User)
    --
    ()
}

Cribroom "1" - "*" Cribroom_User
Cribroom_User "*" - "1" User


entity Guardian {
    + PRIMARY_KEY(id)
    --
    first_name
    last_name
    identification = str, null True
    --
    FOREIGN_KEY(Guardian_Type)
    FOREIGN_KEY(Ident_type)
    --
    ()
}


entity Phone {
    + PRIMARY_KEY(id)
    --
    phone_name
    phone_number
    --
    FOREIGN_KEY(Phone_feature)
    FOREIGN_KEY(Guardian)
    --
    ()
}

Child "*" -- "1" Guardian
Phone "*" - "1" Guardian

entity Form {
    + PRIMARY_KEY(id)
    --
    generation_date
    --
    FOREIGN_KEY(Cribroom_User)
    FOREIGN_KEY(Role)
    --
    setRole()
}

Cribroom_User "*" -- "1" Form

entity Locality {
    + PRIMARY_KEY(id)
    --
    locality
    --
    FOREIGN_KEY(Department)
    --
    ()
}

entity Department {
    + PRIMARY_KEY(id)
    --
    department
    --
    FOREIGN_KEY(Zone)
    --
    ()
}

Department "1" - "*" Locality
Zone "1" - "*" Department
Locality "*" - "1" Cribroom


entity Poll{
    name
    --
    --
    ()
}

entity Question{
    description
    parentQuestion
    questionType = {
     Single Option,
     Single Choice,
     Multiple Choice}
    --
    FOREIGN_KEY(Poll)
    --
    ()
}

entity Answer{
    description
    answerType = {
     Boolean,
     Integer,
     Float,
     String}
    --
    FOREIGN_KEY(Question)
    --
    saveOverride()
}

class ChildAnswer{
    value
    --
    FOREIGN_KEY(Child)
    FOREIGN_KEY(Answer)
    --
    saveOVerride()
    checkAnswerType()
    returnValueAsAnswerType()
}

Child "*" - "1" ChildAnswer
ChildAnswer "1" - "1*" Answer
Answer "*" -- "1" Question
Poll "1" - "*" Question

class TechnicalReport{
    '''indepedent table'''
    *indepedent table
    encabezado
    ministro
    resolucion
    remitanse
    --
    --
    saveOVerride()
    deleteOVerride()
}

@enduml